# InvestAgents

./: .gitignore  README.md  benchmark_parallel.py  config.example.sh  config.sh  main.py  pyproject.toml
cli/: __init__.py  main.py
cli/static/: welcome.txt
invest_agents/: default_config.py
invest_agents/agents/: __init__.py  schemas.py
invest_agents/agents/analysts/: growth_analyst.py  macro_analyst.py  moat_analyst.py  valuation_analyst.py
invest_agents/agents/managers/: portfolio_constructor.py  thesis_manager.py
invest_agents/agents/researchers/: bear_researcher.py  bull_researcher.py
invest_agents/agents/utils/: agent_states.py  agent_utils.py  structured.py
invest_agents/dataflows/: config.py  fred_source.py  interface.py  sec_edgar_source.py  utils.py  yfinance_source.py
invest_agents/graph/: conditional_logic.py  invest_graph.py  setup.py
invest_agents/llm_clients/: __init__.py  factory.py
web/: __init__.py  server.py
