[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-agents"
version = "0.1.0"
description = "Multi-agent LLM framework for long-term stock investment thesis generation & portfolio construction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "InvestAgents contributors" },
]
keywords = [
    "finance",
    "investing",
    "long-term",
    "llm",
    "multi-agent",
    "langgraph",
    "portfolio-construction",
    "investment-thesis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
all-providers = [
    # For full provider support, copy llm_clients from TradingAgents
    "langchain-community>=0.3.0",
]

[project.scripts]
invest-agents = "cli.main:main"
invest-agents-dashboard = "web.server:main"

[tool.setuptools.packages.find]
include = ["invest_agents*", "cli*", "web*"]
